--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body id="gin">
-	<h1>Background Generator</h1>
+	<h1>趙靜臭臭的！</h1>
 	<input oninput="bgchange()" type="color" class="color1" name="color1" value="#00ff00">
 	<input oninput="bgchange()" type="color" class="color2" name="color2" value="#fff000">
 	<h2>Current CSS Background</h2>
