--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body id="gin">
-	<h1>趙靜香香的！</h1>
+	<h1>Bom Shakalaka</h1>
+	<p>first color</p>
 	<input oninput="bgchange()" type="color" class="color1" name="color1" value="#00ff00">
+	<p>second color</p>
 	<input oninput="bgchange()" type="color" class="color2" name="color2" value="#fff000">
 	<h2>Current CSS Background</h2>
 	<h3></h3>
 
-	<button onclick="" value="" id="crazy">Try it</button>
+	<button onclick="" value="" id="crazy">Get the Magic</button>
 
 	<script type="text/javascript" src="javascript.js"></script>
 
