--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<input oninput="bgchange()" type="color" class="color1" name="color1" value="#00ff00">
 	<p>second color</p>
 	<input oninput="bgchange()" type="color" class="color2" name="color2" value="#fff000">
-	<h2>Current CSS Background</h2>
+	<h2>Background change to right</h2>
 	<h3></h3>
 
 	<button onclick="" value="" id="crazy">Get the Magic</button>
